# taller-1-s-2

./: .gitignore  GUIA_TALLER.md  README.md  graph.py  main.py  pyproject.toml  state.py
lab/: README.md  agents.py  graph.py  main.py  state.py
nodes/: publisher.py  researcher.py  reviewer.py  writer.py
utils/: llm.py
