[project]
name = "s2-langgraph-avanzado"
version = "0.1.0"
description = "Laboratorio de LangGraph Avanzado"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain-anthropic>=1.4.7",
    "langchain-google-genai>=4.2.5",
    "langgraph>=1.2.6",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
]
